# django-blog

./: .gitignore  populate.py  posts.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: about.html  create.html  custom_post_list.html  delete.html  detail.html  home.html  pagination.html  update.html
project/: settings.py  urls.py
static/: style.css
templates/: base.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
